--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
 /*    border: 0;*/
 /*}*/
 
+.hidden {
+    display: none;
+}
+
 .quiz{
 
 }
@@ -47,13 +51,10 @@
     color: white;
 }
 
-
 .answer-button{
 
 }
-.answer-button{
 
-}
 .score-wrap {
 
 }
