--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url('fonts.css');
 
+/* Общие стили для всех элементов */
 * {
     padding: 0;
     margin: 0;
@@ -9,144 +10,225 @@
     border: 0;
 }
 
-body{
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: 400;
+/* Переменные для цветов */
+:root {
+    --main-bg-color: cornflowerblue;
+    --main-font-family: "Yanone Kaffeesatz", sans-serif;
+    --main-font-weight: 400;
+    --active-bg-color: cornflowerblue;
+    --active-font-color: white;
+    --disabled-bg-color: #dddddd;
+    --disabled-font-color: #aaaaaa;
+    --correct-bg-color: mediumseagreen;
+    --wrong-bg-color: orangered;
 }
 
+/* Основные стили для body */
+body {
+    font-family: var(--main-font-family), serif;
+    font-weight: var(--main-font-weight);
+}
+
+/* Скрытие и отображение элементов */
 .hidden {
     opacity: 0;
 }
-.visible{
+.visible {
     opacity: 1;
 }
 
-.quiz{
+/* Основные стили для викторины */
+.quiz {
     background: linear-gradient(45deg, rgb(110, 124, 227) 14%, rgb(177, 241, 251) 97%);
-    padding: 20px 0;
+    padding: 15px 0;
+    min-height: 100vh;
+
 }
-.quiz__container{
+.quiz__container {
     max-width: 1170px;
-    margin: auto;
+    margin: 0 auto ;
 }
-.question{
-    max-width: 700px;
+
+/* Стили для вопроса */
+.question {
+    max-width: 90%;
     margin: auto;
-    padding: 30px 20px 20px;
+    padding: 30px;
     background-color: rgba(240, 248, 255, 0.85);
-    border-radius: 25px
+    border-radius: 25px;
 }
-
-.question__title{
-    max-width: 400px;
+.question__title,
+.question__text {
+    max-width: 550px;
     margin: auto auto 30px;
-}
-
-.question__title p{
     text-align: center;
-    font-size: 20px;
 }
-
-.question__text{
-    max-width: 400px;
-    margin: auto auto 20px;
-}
-
-.question__text p{
-    text-align: center;
+.question__title p {
     font-size: 30px;
 }
-
-.question__message{
+.question__text p {
+    font-size: 70px;
+}
+.question__message {
     display: block;
     max-width: 400px;
     text-align: center;
     margin: auto auto 20px;
 }
 
-.answer-list{
-    max-width: 500px;
+/* Стили для списка ответов */
+.answer-list {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     margin: auto auto 35px;
 }
+.answer-list li {
+    margin-bottom: 15px;
+}
+.answer-list li:last-child {
+    margin-bottom: 0;
+}
 
-.answer{
+/* Общие стили для кнопок */
+.button {
     padding: 10px 25px;
+    border-radius: 25px;
+    font-family: var(--main-font-family), serif;
+    font-weight: var(--main-font-weight);
+    font-size: 20px;
+    cursor: pointer;
+}
+.button--answer {
     background-color: transparent;
-    border: 2px solid cornflowerblue;
-    border-radius: 25px;
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
+    border: 2px solid var(--main-bg-color);
+    font-size: 24px;
 }
-
-.answer-button{
-    display: block;
-    padding: 10px 25px;
-    border-radius: 25px;
-    margin: auto auto 20px;
-    background-color: cornflowerblue;
-    color: white;
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-
+.button--active {
+    background-color: var(--active-bg-color);
+    color: var(--active-font-color);
 }
-.answer-button:disabled {
-    background-color: #dddddd;
-    color: #aaaaaa;
+.button--disabled {
+    background-color: var(--disabled-bg-color);
+    color: var(--disabled-font-color);
     cursor: not-allowed;
 }
 
-.score-wrap{
-    display: flex;
-    justify-content: space-between;
+/* Стили для ответов */
+.answer {
+    padding: 10px 25px;
+    background-color: transparent;
+    border: 2px solid var(--main-bg-color);
+    border-radius: 25px;
+    font-family: var(--main-font-family), serif;
+    font-weight: var(--main-font-weight);
+    font-size: 32px;
 }
-
-.correct-answer {
-    border: 2px solid mediumseagreen;
-    background-color: mediumseagreen;
-    color: white;
+.answer--correct {
+    border: 2px solid var(--correct-bg-color);
+    background-color: var(--correct-bg-color);
+    color: var(--active-font-color);
 }
-
-.wrong-answer {
-    border: 2px solid orangered;
-    background-color: orangered;
-    color: white;
+.answer--wrong {
+    border: 2px solid var(--wrong-bg-color);
+    background-color: var(--wrong-bg-color);
+    color: var(--active-font-color);
 }
 .active {
-    background-color: cornflowerblue;
-    color: white;
+    background-color: var(--active-bg-color);
+    color: var(--active-font-color);
 }
 
+/* Стили для кнопок */
+.answer-button {
+    display: block;
+    padding: 10px 25px;
+    border-radius: 25px;
+    margin: auto auto 20px;
+    background-color: var(--main-bg-color);
+    color: var(--active-font-color);
+    font-family: var(--main-font-family), serif;
+    font-weight: var(--main-font-weight);
+    font-size: 32px;
+    cursor: pointer;
+}
+.answer-button:disabled {
+    background-color: var(--disabled-bg-color);
+    color: var(--disabled-font-color);
+    cursor: not-allowed;
+}
 .restart-button {
     padding: 10px 25px;
     border-radius: 25px;
-    border: 2px solid cornflowerblue;
+    border: 2px solid var(--main-bg-color);
     background-color: transparent;
-    color: cornflowerblue;
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
+    color: var(--main-bg-color);
+    font-family: var(--main-font-family), serif;
+    font-weight: var(--main-font-weight);
+    font-size: 32px;
+    cursor: pointer;
 }
-
-.next-button{
+.next-button {
     padding: 10px 25px;
     border-radius: 25px;
-    background-color: cornflowerblue;
-    color: white;
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
+    background-color: var(--main-bg-color);
+    color: var(--active-font-color);
+    font-family: var(--main-font-family), serif;
+    font-weight: var(--main-font-weight);
+    font-size: 32px;
+    cursor: pointer;
 }
-
 .next-button:disabled {
-    background-color: #dddddd;
-    color: #aaaaaa;
+    background-color: var(--disabled-bg-color);
+    color: var(--disabled-font-color);
     cursor: not-allowed;
 }
+
+/* Стили для обёртки с очками */
+.score-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+@media all and (max-width: 768px) {
+    .question__title p {
+        font-size: 24px;
+    }
+    .question__text p {
+        font-size: 60px;
+    }
+}
+
+@media (max-width: 480px) {
+    .quiz__container {
+        padding: 0 20px;
+    }
+    .question {
+        padding: 20px;
+        width: 95%;
+    }
+}
+
+@media (max-width: 320px) {
+    .question {
+        width: 100%;
+        height: 100vh;
+    }
+    .question__title p {
+        font-size: 24px;
+    }
+    .question__text p {
+        font-size: 70px; /* Изменено с 1000px на 70px, чтобы избежать проблем с переполнением */
+    }
+}
+
+
+
+
+
+
+
 
 
 
