--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url('fonts.css');
 
-/* Общие стили для всех элементов */
+
 * {
     padding: 0;
     margin: 0;
@@ -39,23 +39,29 @@ body {
 
 /* Основные стили для викторины */
 .quiz {
-    /*background: linear-gradient(45deg, rgb(110, 124, 227) 14%, rgb(177, 241, 251) 97%);*/
-    padding: 15px 0;
-    min-height: 100vh;
-
+    background: linear-gradient(45deg, rgb(110, 124, 227) 14%, rgb(177, 241, 251) 97%);
+    padding: 20px 0;
 }
 .quiz__container {
-    max-width: 1170px;
+    max-width: 1200px;
     margin: 0 auto ;
 }
 
 /* Стили для вопроса */
-.question {
+.question-wrapper {
     max-width: 90%;
+    min-height: calc(100vh - 100px);
     margin: auto;
     padding: 30px;
     background-color: rgba(240, 248, 255, 0.85);
     border-radius: 25px;
+}
+.question {
+    min-height: calc(100vh - 100px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .question__title,
 .question__text {
@@ -64,19 +70,19 @@ body {
     text-align: center;
 }
 .question__title p {
-    font-size: 30px;
+    font-size: 28px;
 }
 .question__text p {
-    font-size: 70px;
+    font-size: 56px;
 }
 .question__message {
     display: block;
     max-width: 400px;
     text-align: center;
     margin: auto auto 20px;
+    font-size: 30px;
 }
 
-/* Стили для списка ответов */
 .answer-list {
     display: flex;
     flex-direction: column;
@@ -96,7 +102,7 @@ body {
     border-radius: 25px;
     font-family: var(--main-font-family), serif;
     font-weight: var(--main-font-weight);
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
 }
 .button--answer {
@@ -124,12 +130,12 @@ body {
     font-weight: var(--main-font-weight);
     font-size: 32px;
 }
-.answer--correct {
+.correct-answer {
     border: 2px solid var(--correct-bg-color);
     background-color: var(--correct-bg-color);
     color: var(--active-font-color);
 }
-.answer--wrong {
+.wrong-answer{
     border: 2px solid var(--wrong-bg-color);
     background-color: var(--wrong-bg-color);
     color: var(--active-font-color);
@@ -139,7 +145,6 @@ body {
     color: var(--active-font-color);
 }
 
-/* Стили для кнопок */
 .answer-button {
     display: block;
     padding: 10px 25px;
@@ -184,51 +189,64 @@ body {
     cursor: not-allowed;
 }
 
-/* Стили для обёртки с очками */
+
 .score-wrap {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-
-@media all and (max-width: 768px) {
+@media (max-width: 1024px){
     .question__title p {
         font-size: 24px;
     }
     .question__text p {
-        font-size: 60px;
+        font-size: 36px;
+    }
+    .answer, .button, .question__message{
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .question__title p {
+        font-size: 24px;
+    }
+    .question__text p {
+        font-size: 40px;
+    }
+    .answer, .answer-button, .next-button, .restart-button, .question__message{
+        font-size: 24px;
     }
 }
 
 @media (max-width: 480px) {
-    .quiz__container {
-        padding: 0 20px;
+
+    .question__title p {
+        font-size: 24px;
     }
-    .question {
-        padding: 20px;
-        width: 95%;
+    .question__text p {
+        font-size: 28px;
+    }
+    .answer, .answer-button, .next-button, .restart-button, .question__message{
+        font-size: 18px;
     }
 }
 
 @media (max-width: 320px) {
     .question {
         width: 100%;
-        height: 100vh;
     }
     .question__title p {
-        font-size: 24px;
+        font-size: 20px;
     }
     .question__text p {
-        font-size: 70px; /* Изменено с 1000px на 70px, чтобы избежать проблем с переполнением */
+        font-size: 24px;
+    }
+    .answer, .answer-button, .next-button, .restart-button{
+        font-size: 16px;
+    }
+    .question__message{
+        font-size: 12px;
     }
 }
-
-
-
-
-
-
-
-
-
-
